samples/_failures_safe/1761072181_fa5914_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c5a91b7a.c: In function ‘main’:
./samples/SAFE/__tmp_c5a91b7a.c:153:17: error: expected ‘;’ at end of input
  153 |     print_matrix
      |                 ^
      |                 ;
./samples/SAFE/__tmp_c5a91b7a.c:153:5: error: expected declaration or statement at end of input
  153 |     print_matrix
      |     ^~~~~~~~~~~~
